@@ -61,27 +61,32 @@ if ( ! defined( 'ABSPATH' ) ) exit;
 			}
 			// If it's included in a posts archive page.
 			else {
-				if ( 0 < intval( suki_get_theme_mod( 'entry_excerpt_length' ) ) ) {
-					// Excerpt
-					the_excerpt();
+				if ( 'excerpt' === suki_get_theme_mod( 'entry_excerpt' ) ) {
+					if ( 0 < intval( suki_get_theme_mod( 'entry_excerpt_length' ) ) ) {
+						// Excerpt
+						the_excerpt();
 
-					// Read more
-					if ( '' !== suki_get_theme_mod( 'entry_read_more_display' ) ) {
-						?>
-						<p>
-							<a href="<?php echo esc_url( get_the_permalink() ); ?>" class="<?php echo esc_attr( suki_get_theme_mod( 'entry_read_more_display' ) ); ?>">
-								<?php
-								$text = suki_get_theme_mod( 'entry_read_more_text' );
-								if ( empty( $text ) ) {
-									$text = esc_html__( 'Read more', 'suki' );
-								}
+						// Read more
+						if ( '' !== suki_get_theme_mod( 'entry_read_more_display' ) ) {
+							?>
+							<p>
+								<a href="<?php echo esc_url( get_the_permalink() ); ?>" class="more-link <?php echo esc_attr( suki_get_theme_mod( 'entry_read_more_display' ) ); ?>">
+									<?php
+									$text = suki_get_theme_mod( 'entry_read_more_text' );
+									if ( empty( $text ) ) {
+										$text = esc_html__( 'Read more', 'suki' );
+									}
 
-								echo esc_html( $text );
-								?>
-							</a>
-						</p>
-						<?php
+									echo esc_html( $text );
+									?>
+								</a>
+							</p>
+							<?php
+						}
 					}
+				} else {
+					// Print the content.
+					the_content();
 				}
 			}
 			
